# web-server-sc2

./: README.md  compose.yml  docker-compose.yml  start.bash  terminator.conf
backend/: Dockerfile  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  tsconfig.json
backend/sc2_websocket_bridge/: cli.py  fastapi_wrapper.py  loader.py  main.py  utils.py
backend/sc2_websocket_bridge/model/: game.py
backend/src/: index.ts
backend/static/: index.html
client-svelte/src/routes/: +page.svelte
client-svelte/src/theme/dark/: _smui-theme.scss
client-svelte/static/: smui-dark.css  smui.css
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend-svelte/: Dockerfile  package-lock.json  package.json
frontend-svelte/src/: app.html
frontend-svelte/src/lib/model/: IGame.ts
frontend-svelte/src/routes/: +page.svelte
frontend-svelte/src/theme/dark/: _smui-theme.scss
frontend/src/: app.css  app.html
frontend/src/lib/com/: BaseCom.ts  SCCom.ts
frontend/src/lib/interfaces/: IGameInfo.ts  IGameMeta.ts  IGameStep.ts  IMap.ts
frontend/src/lib/model/: IGameMeta.ts  IGameStep.ts
frontend/src/lib/state/: ui_state.svelte.ts
frontend/src/lib/store/: games.ts  map.ts  sc_com.ts  step.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/theme/: _smui-theme.scss
server/: package-lock.json
server/src/: handle_web.ts  web.ts
server/static/: index.html
