[metadata]
name = sc2_websocket_bridge
version = 0.1.0
author = Andreas Bresser
author_email = Andreas.Bresser@dfki.de
license = BSD-3
description = StarCraft II WebSocket Bridge.
url = https://github.com/brean/web-server-sc2

long_description = file: README.md
long_description_content_type = text/markdown

[options]
# Automatically find all packages in the project
packages = find:

# Define runtime dependencies, one per line
install_requires =
    argcomplete
    fastapi
    pyyaml
    uvicorn
    websockets

[options.entry_points]
console_scripts = sc2_web = sc2_websocket_bridge.cli:main

[bumpversion]
current_version = 0.1.3
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:video_stream_data/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest